# ray_tracer

./: CMakeLists.txt  Color.h  Interaction.h  README.md  Ray.h  Shape.h  Sphere.h  Vec3.h  main.cpp  vec3.h
src/: Interaction.h  Scene.h  Sphere.h  camera.h  color.h  dielectric.h  interaction.h  lambertian.h  main.cpp  material.h  metal.h  ray.h  scene.h  shape.h  sphere.h  utility.h  vec3.h
